--- a/style/index.css
+++ b/style/index.css
@@ -125,6 +125,31 @@ p {
 .bottom-content .text-container:last-child {
     padding-right: 0;
 }
+img {
+    display: flex;
+    justify-content: space-around;
+    height: 50%;
+    width: 50%;
+}
+header {
+    width: 100%;
+    /* background: black; */
+}
+
+header nav {
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 2%;
+    font-size: 14px;
+}
+
+header nav a {
+    color: black;
+    text-decoration: none;
+}
+
 
 footer {
     width: 100%;
